--- a/react-test/index.html
+++ b/react-test/index.html
@@ -13,11 +13,13 @@ Wait for Babel Transpiling jsx ...
 
 <script src="../timeengine.js"></script>
 <script src="../node_modules/immutable/dist/immutable.min.js"></script>
-<script src="../node_modules/react/dist/react.min.js"></script>
-<script src="../node_modules/react-dom/dist/react-dom.min.js"></script>
+<script src="../node_modules/react/dist/react.js"></script>
+<script src="../node_modules/react-dom/dist/react-dom.js"></script>
 
 <script src="../node_modules/timeengine-react/timeengine-react.js"></script>
 
-<script src="./index.js"></script>
+<script src="./babel-core-5.8.24-browser.js"></script>
+
+<script type="text/babel" src="./index.jsx"></script>
 
 </body>
